--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header .header-content .text h1 .bb {
   border-bottom: 5px solid rgb(255, 0, 247);
 }
 header .header-content .photo {
-  background-image: url("/images/IMG_0125.jpg");
+  background-image: url("/images/IMG_0101.jpg");
   background-size: cover;
   background-position: center;
   width: 500px;
@@ -47,6 +47,7 @@ header .header-content .photo-shadow {
   background-color: rgba(255, 0, 247, 0.15);
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 header .header-content .profiles {
   position: absolute;
