--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,8 @@ header {
 			}
 		}
 		.photo {
-			background-image: url("/images/IMG_0125.jpg");
+			background-image: url("/images/IMG_0101.jpg");
+
 			background-size: cover;
 			background-position: center;
 			width: 500px;
@@ -47,6 +48,7 @@ header {
 			background-color: rgba($color: $mainColor, $alpha: 0.15);
 			width: 100%;
 			height: 100%;
+			overflow: hidden;
 		}
 		.profiles {
 			position: absolute;
