--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ header .header-content .photo-shadow {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(255, 0, 247, 0.15);
+  background-color: rgba(255, 0, 247, 0.1);
   width: 100%;
   height: 100%;
 }
@@ -80,7 +80,6 @@ h2 {
 
 .links {
   display: flex;
-  justify-content: center;
 }
 
 .link {
@@ -126,7 +125,7 @@ h2 {
 }
 
 .skills {
-  border-top: 2px solid lightGray;
+  border-top: 2px solid #a5a5a5;
   margin: 50px 100px;
 }
 .skills h2 {
@@ -152,7 +151,7 @@ h2 {
 }
 
 .projects {
-  border-top: 2px solid lightGray;
+  border-top: 2px solid #a5a5a5;
   margin: 50px 100px;
 }
 .projects .project-card {
@@ -197,10 +196,18 @@ h2 {
   background-position: center;
   height: 70%;
 }
+.projects .p5 .photo {
+  background-image: url("/images/holidaycount.png");
+  background-size: cover;
+  background-position: center;
+  height: 70%;
+}
 
 .contact-me {
-  background-color: lightGray;
+  background-color: #a5a5a5;
   width: 100%;
+  background-image: url("/images/bg-pattern-intro-left-desktop.svg");
+  background-repeat: no-repeat;
 }
 .contact-me .box {
   margin: 50px 100px;
@@ -209,7 +216,7 @@ h2 {
   flex-direction: row;
   justify-content: space-between;
   height: 400px;
-  border-top: 2px solid lightGray;
+  border-top: 2px solid #a5a5a5;
 }
 .contact-me .box .contact-text {
   display: flex;
@@ -245,7 +252,7 @@ h2 {
 .contact-me .box .contact-form form textarea {
   width: 100%;
   border: none;
-  background-color: lightGray;
+  background-color: #a5a5a5;
   border-bottom: 1px solid white;
   padding: 15px;
 }
@@ -332,6 +339,9 @@ h2 {
     height: 400px;
     width: 375px;
   }
+  .links {
+    justify-content: center;
+  }
   .projects {
     margin: 50px 50px;
   }
@@ -343,6 +353,7 @@ h2 {
   }
   .contact-me {
     height: 600px;
+    background-image: url(/images/bg-pattern-intro-left-mobile.svg);
   }
   .contact-me .box {
     margin: 50px 0px;
