--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,12 @@
 @use "colors" as *;
+
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 }
+
+
 body {
 	min-height: 100vh;
 	background-color: white;
@@ -30,7 +33,7 @@ header {
 					border-bottom: 5px solid $mainColor;
 				}
 			}
-			p{
+			p {
 				margin-bottom: 50px;
 			}
 		}
@@ -49,10 +52,9 @@ header {
 			position: absolute;
 			top: 0;
 			left: 0;
-			background-color: rgba($color: $mainColor, $alpha: 0.15);
+			background-color: rgba($color: $mainColor, $alpha: 0.1);
 			width: 100%;
 			height: 100%;
-			
 		}
 		.profiles {
 			position: absolute;
@@ -82,7 +84,6 @@ h2 {
 }
 .links {
 	display: flex;
-	justify-content:center;
 }
 
 .link {
@@ -204,10 +205,20 @@ h2 {
 			height: 70%;
 		}
 	}
+	.p5{
+		.photo {
+			background-image: url("/images/holidaycount.png");
+			background-size: cover;
+			background-position: center;
+			height: 70%;
+		}
+	}
 }
 .contact-me {
 	background-color: $lightGray;
 	width: 100%;
+	background-image: url("/images/bg-pattern-intro-left-desktop.svg");
+	background-repeat: no-repeat;
 	.box {
 		margin: 50px 100px;
 		margin-bottom: 0;
@@ -227,19 +238,17 @@ h2 {
 			p {
 				width: 70%;
 			}
-			.call{
+			.call {
 				text-decoration: none;
 				text-transform: uppercase;
 				font-weight: bold;
 				margin-left: 5px;
-				color:$mainColor;
-				transition: color .3s;
+				color: $mainColor;
+				transition: color 0.3s;
 			}
-			.call:hover{
-				color:white;
-
+			.call:hover {
+				color: white;
 			}
-			
 		}
 		.contact-form {
 			width: 90%;
@@ -333,13 +342,15 @@ h2 {
 				p {
 					font-size: 1rem;
 				}
-			
 			}
 			.photo {
 				height: 400px;
 				width: 375px;
 			}
 		}
+	}
+	.links{
+		justify-content: center;
 	}
 	.projects {
 		margin: 50px 50px;
@@ -355,6 +366,7 @@ h2 {
 	}
 	.contact-me {
 		height: 600px;
+		background-image: url(/images/bg-pattern-intro-left-mobile.svg);
 		.box {
 			margin: 50px 0px;
 			flex-direction: column;
@@ -380,7 +392,7 @@ h2 {
 	body {
 		background-size: 400%;
 	}
-	.links{
+	.links {
 		margin-left: 20px;
 	}
 	.link {
