--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,15 @@
 @use "colors" as *;
-
+@mixin projectphoto($url) {
+	background-image: url($url);
+	background-size: cover;
+	background-position: center;
+	height: 70%;
+}
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 }
-
 
 body {
 	min-height: 100vh;
@@ -175,42 +179,27 @@ h2 {
 
 	.p1 {
 		.photo {
-			background-image: url("/images/feedrawimg.png");
-			background-size: cover;
-			background-position: center;
-			height: 70%;
+			@include projectphoto("/images/feedrawimg.png");
 		}
 	}
 	.p2 {
 		.photo {
-			background-image: url("/images/calc.png");
-			background-size: cover;
-			background-position: center;
-			height: 70%;
+			@include projectphoto("/images/calc.png");
 		}
 	}
 	.p3 {
 		.photo {
-			background-image: url("/images/advice.png");
-			background-size: cover;
-			background-position: center;
-			height: 70%;
+			@include projectphoto("/images/advice.png");
 		}
 	}
 	.p4 {
 		.photo {
-			background-image: url("/images/todo.png");
-			background-size: cover;
-			background-position: center;
-			height: 70%;
+			@include projectphoto("/images/todo.png");
 		}
 	}
-	.p5{
+	.p5 {
 		.photo {
-			background-image: url("/images/holidaycount.png");
-			background-size: cover;
-			background-position: center;
-			height: 70%;
+			@include projectphoto("/images/holidaycount.png");
 		}
 	}
 }
@@ -349,7 +338,7 @@ h2 {
 			}
 		}
 	}
-	.links{
+	.links {
 		justify-content: center;
 	}
 	.projects {
