--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ header .header-content .text p {
   margin-bottom: 50px;
 }
 header .header-content .photo {
+  margin-top: 50px;
   background-image: url("/images/imgbig.jpg");
   background-size: cover;
   background-position: center;
