--- a/style.scss
+++ b/style.scss
@@ -45,6 +45,7 @@ header {
 			}
 		}
 		.photo {
+			margin-top: 50px;
 			background-image: url("/images/imgbig.jpg");
 			background-size: cover;
 			background-position: center;
