--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,9 @@ h2 {
   font-weight: bold;
   margin: 10px 0px;
 }
+.projects .name span {
+  font-size: 0.7rem;
+}
 .projects .technologies {
   display: flex;
   text-transform: uppercase;
@@ -176,6 +179,13 @@ h2 {
 .projects .technologies p {
   margin-right: 5px;
   font-size: 0.9rem;
+}
+.projects .p01 .photo {
+  background-image: url("/images/beady.png");
+  background-size: cover;
+  background-position: center;
+  height: 70%;
+  background-position: top;
 }
 .projects .p0 .photo {
   background-image: url("/images/ipadresstracker.png");
